--- a/Bac_a_sable/test3/src/page.html
+++ b/Bac_a_sable/test3/src/page.html
@@ -44,11 +44,121 @@
       <area class="room 415" shape="rect" coords="410,591,686,734" nohref>
       <area class="room 416" shape="rect" coords="410,446,686,590" nohref>
       <area class="room 417" shape="rect" coords="410,302,686,445" nohref>
+      <area class="room 418" shape="rect" coords="36,1531,310,1917" nohref>
+      <area class="room 419" shape="rect" coords="36,1918,310,2050" nohref>
+      <area class="room 420" shape="rect" coords="36,2064,310,2201" nohref>
+      <area class="room 421A" shape="rect" coords="36,2202,310,2341" nohref>
+      <area class="room 421B" shape="rect" coords="36,2342,310,2480" nohref>
+      <area class="room 422" shape="rect" coords="36,2481,310,2692" nohref>
+      <area class="room 423" shape="rect" coords="211,2693,310,2769" nohref>
+      <area class="room 424" shape="rect" coords="410,2482,686,2692" nohref>
+      <area class="room 425" shape="rect" coords="410,2204,686,2480" nohref>
+      <area class="room 426" shape="rect" coords="410,2063,686,2202" nohref>
+      <area class="room 427" shape="rect" coords="410,1919,686,2049" nohref>
+      <area class="room 428" shape="rect" coords="410,1637,686,1918" nohref>
+      <area class="cafet" shape="rect" coords="36,2693,208,2849" nohref>
+      <area class="cafet" shape="rect" coords="36,2849,158,2981" nohref>
+      <area class="manip" shape="rect" coords="36,2983,310,3135" nohref>
+      <area class="room 429" shape="rect" coords="36,3136,310,3288" nohref>
+      <area class="room 430" shape="rect" coords="36,3290,310,3443" nohref>
+      <area class="room 431" shape="rect" coords="36,3445,310,3596" nohref>
+      <area class="room 432" shape="rect" coords="36,3598,310,3904" nohref>
+      <area class="room 433" shape="rect" coords="36,3907,310,4059" nohref>
+      <area class="room 434" shape="rect" coords="410,3753,686,4234" nohref>
+      <area class="room 435" shape="rect" coords="410,3753,686,4234" nohref>
+      <area class="room 436" shape="rect" coords="410,3600,686,3751" nohref>
+      <area class="room 437" shape="rect" coords="410,3445,686,3597" nohref>
+      <area class="room 438" shape="rect" coords="410,3292,686,3442" nohref>
+      <area class="room 439" shape="rect" coords="410,2983,686,3288" nohref>
     </map>
 
-    <map name=#etage5>
+    <map name=etage5>
+      <area class="room 501" shape="rect" coords="25.7,14.3,298.6,254.3" nohref>
+      <area class="room 502" shape="rect" coords="25.7,254.4,298.6,407.1" nohref>
+      <area class="room 503" shape="rect" coords="25.7,408.6,298.6,647.1" nohref>
+      <area class="room 504" shape="rect" coords="25.7,654.1,298.6,802.9" nohref>
+      <area class="room 505" shape="rect" coords="25.7,802.9,298.6,954.3" nohref>
+      <area class="room 506" shape="rect" coords="25.7,961.4,298.6,1114.3" nohref>
+      <area class="room 507" shape="rect" coords="25.7,1117.1,298.6,1265.7" nohref>
+      <area class="room 508" shape="rect" coords="25.7,14.3,298.6,254.3" nohref>
+      <area class="room 509" shape="rect" coords="25.7,254.4,298.6,407.1" nohref>
+      <area class="room 510" shape="rect" coords="398.6,1562.9,671.4,1705.7" nohref>
+      <area class="room 511" shape="rect" coords="398.6,1414.3,671.4,1560" nohref>
+      <area class="room 512" shape="rect" coords="398.6,1270,671.4,1414.3" nohref>
+      <area class="room 513A" shape="rect" coords="398.6,962.9,671.4,1112.9" nohref>
+      <area class="room 513B" shape="rect" coords="398.6,1115.7,671.4,1265.7" nohref>
+      <area class="room 514" shape="rect" coords="398.6,805.7,671.4,954.3" nohref>
+      <area class="room 515" shape="rect" coords="398.6,650.0,671.4,802.9" nohref>
+      <area class="room 516" shape="rect" coords="398.6,494.3,671.4,647.1" nohref>
+      <area class="room 517" shape="rect" coords="398.6,342.9,671.4,492.9" nohref>
+      <area class="room 518A" shape="rect" coords="25.7,1625.7,298.6,1770" nohref>
+      <area class="room 518B" shape="rect" coords="25.7,1772.9,298.6,2000" nohref>
+      <area class="room 519" shape="rect" coords="25.7,2004.3,298.6,2147.1" nohref>
+      <area class="room 520" shape="rect" coords="25.7,2157.1,298.6,2318.6" nohref>
+      <area class="room 521A" shape="rect" coords="25.7,2320,298.6,2480" nohref>
+      <area class="room 521B" shape="rect" coords="25.7,2482.9,298.6,2630" nohref>
+      <area class="room 522" shape="rect" coords="25.7,2630,298.6,2872.9" nohref>
+      <area class="cafet" shape="rect" coords="25.7,2871.4,197.1,3047.1" nohref>
+      <area class="cafet" shape="rect" coords="25.7,3047.1,148.6,3158.6" nohref>
+      <area class="room 523" shape="rect" coords="398.6,2872.9,297.1,2960" nohref>
+      <area class="room 524" shape="rect" coords="398.6,2632.9,671.4,2871.4" nohref>
+      <area class="room 525" shape="rect" coords="398.6,2482.9,671.4,2630" nohref>
+      <area class="room 526A" shape="rect" coords="398.6,2320,671.4,2480" nohref>
+      <area class="room 526" shape="rect" coords="398.6,2158.6,671.4,2318.6" nohref>
+      <area class="room 527" shape="rect" coords="398.6,2004.3,671.4,2147.1" nohref>
+      <area class="room 528B" shape="rect" coords="398.6,1858.6,671.4,2000" nohref>
+      <area class="room 528A" shape="rect" coords="398.6,1711.4,671.4,1854.3" nohref>
+      <area class="room 529A" shape="rect" coords="25.7,3160,298.6,3310" nohref>
+      <area class="room 529B" shape="rect" coords="25.7,3311.4,298.6,3455.7" nohref>
+      <area class="room 530" shape="rect" coords="25.7,3454.3,298.6,3608.6" nohref>
+      <area class="room 531A" shape="rect" coords="25.7,3610,298.6,3762.9" nohref>
+      <area class="room 531B" shape="rect" coords="25.7,3764.3,298.6,3917.1" nohref>
+      <area class="room 532" shape="rect" coords="25.7,3918.6,298.6,4070" nohref>
+      <area class="room 533" shape="rect" coords="25.7,4071.4,298.6,4222.9" nohref>
+      <area class="room 534" shape="rect" coords="398.6,4160,671.4,4398.6" nohref>
+      <area class="room 535" shape="rect" coords="398.6,3917.1,671.4,4158.6" nohref>
+      <area class="room 536" shape="rect" coords="398.6,3765.7,671.4,3914.3" nohref>
+      <area class="room 537" shape="rect" coords="398.6,3611.4,671.4,3761.4" nohref>
+      <area class="room 538" shape="rect" coords="398.6,3454.3,671.4,3610" nohref>
+      <area class="room 539" shape="rect" coords="398.6,3160,671.4,3454.3" nohref>
+
+
+
     </map>
+
+
     <map name="#etage6">
+      <area class="room 601" shape="rect" coords="20,13,293,166" nohref>
+      <area class="room 602" shape="rect" coords="20,167,293,340" nohref>
+      <area class="room 603A" shape="rect" coords="20,341,293,495" nohref>
+      <area class="room 603B" shape="rect" coords="20,496,293,649" nohref>
+      <area class="room 604A" shape="rect" coords="20,650,293,802" nohref>
+      <area class="room 604B" shape="rect" coords="20,804,293,956" nohref>
+      <area class="room 605" shape="rect" coords="20,1117.1,293,1265.7" nohref>
+      <area class="room 606" shape="rect" coords="20,959,293,1116" nohref>
+      <area class="room 607" shape="rect" coords="20,1118,293,1512" nohref>
+      <area class="room 608" shape="rect" coords="399,1272,674,1511" nohref>
+      <area class="room 609B" shape="rect" coords="399,1118,674,1269" nohref>
+      <area class="room 609A" shape="rect" coords="399,1270,674,1116" nohref>
+      <area class="room 610" shape="rect" coords="399,804,674,955" nohref>
+      <area class="room 611" shape="rect" coords="399,564,674,803" nohref>
+      <area class="room 612" shape="rect" coords="399,342,674,560" nohref>
+      <area class="room 613" shape="rect" coords="20,1514,293,1754" nohref>
+      <area class="room 614" shape="rect" coords="20,1756,293,1908" nohref>
+      <area class="room 615A" shape="rect" coords="20,1910,293,2061" nohref>
+      <area class="room 615B" shape="rect" coords="20,2063,293,2216" nohref>
+      <area class="room 616" shape="rect" coords="20,2217,293,2523" nohref>
+      <area class="room 617" shape="rect" coords="20,2526,293,2677" nohref>
+      <area class="room 618" shape="rect" coords="20,2680,293,2832" nohref>
+      <area class="room 619B" shape="rect" coords="399,2767,674,2921" nohref>
+      <area class="room 619A" shape="rect" coords="399,2614,674,2765" nohref>
+      <area class="room 620" shape="rect" coords="399,2459,674,2612" nohref>
+      <area class="room 621" shape="rect" coords="399,2217,674,2457" nohref>
+      <area class="room 622A" shape="rect" coords="399,2064,674,2214" nohref>
+      <area class="room 622B" shape="rect" coords="399,1910,674,2061" nohref>
+      <area class="room 623A" shape="rect" coords="399,1756,674,1908" nohref>
+      <area class="room 624" shape="rect" coords="399,1514,674,1753" nohref>
+      <area class="room 625" shape="rect" coords="20,2833,293,2985" nohref>
     </map>
 
     <script src="./script.js"></script>
